fix: security improvements and code quality fixes
- Externalize JWT secret to environment variable (JWT_SECRET)
- Externalize CORS origins to environment variable (CORS_ORIGINS)
- Remove /api/v1/auth/register from public endpoints (security risk)
- Use dynamic Origin header in 401 handler instead of hardcoded localhost
- Frontend API URL now uses VITE_API_URL env var
- Fix Long reference comparison bug in PromotionServiceImpl (.equals() instead of !=)
- Add try-catch for JSON.parse in AuthContext (corrupted localStorage safety)
- Fix missing CreditCard import in AppointmentsPage (runtime crash fix)
- Remove unused imports: BentoStatCard, BentoCard, BentoListCard, Search
- Remove hardcoded fallback roles in UsersPage
- Replace console.error with toast notifications in Dashboard/Reports/CashRegister
- Update test files to use roleId instead of deleted UserRole enum
- Create .env.example with required environment variables